
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.ksu.yangming.tripbillmanager.EntryManageActivity">




    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:screenOrientation="portrait"
        android:id = "@+id/content" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/entry_title"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:text="@string/entry_name" />
            <EditText
                android:id="@+id/entry_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/entry_title"
                android:inputType="textNoSuggestions" />

            <TextView
                android:id="@+id/total"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/entry_name"
                android:text="@string/total" />

            <EditText
                android:id="@+id/sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_toRightOf="@+id/total"
                android:layout_below="@id/entry_name"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/time"
                android:layout_width="50dp"
                android:gravity="center"
                android:layout_height="50dp"
                android:layout_below = "@id/total"
                android:text="@string/time"/>

            <TextView
                android:id="@+id/timeDisplay"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_below="@id/total"
                android:layout_toRightOf="@id/time"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_below = "@id/time"
                android:text="@string/date"/>


            <TextView
                android:id="@+id/dateDisplay"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_below="@id/timeDisplay"
                android:layout_toRightOf="@id/date"
                android:layout_height="50dp"/>
            <TextView
                android:id="@+id/place"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:gravity="center"
                android:layout_below = "@id/date"
                android:text="@string/place"/>
            <TextView
                android:id="@+id/mapDisplay"
                android:layout_width="match_parent"
                android:layout_below="@id/date"
                android:layout_toRightOf="@id/place"
                android:gravity="center"
                android:lines="2"
                android:maxLines="4"
                android:layout_height="80dp"/>

            <Button
                android:id="@+id/takePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/mapDisplay"
                android:text="@string/take_photo">

            </Button>
            <Button
                android:id="@+id/selectPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/mapDisplay"
                android:text="@string/select_photo">

            </Button>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageGallery"
                android:layout_below="@id/takePhoto" >
                <LinearLayout
                    android:id="@+id/images"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >


                </LinearLayout>
            </HorizontalScrollView>
            <Button
                android:id="@+id/delete"
                android:layout_marginTop="50dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_below="@id/imageGallery"
                android:layout_alignParentLeft="true"
                android:text="@string/delete" />

            <Button
                android:id="@+id/save"
                android:layout_marginTop="50dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_below="@id/imageGallery"
                android:layout_alignParentRight="true"
                android:text="@string/save" />
        </RelativeLayout>


    </ScrollView>

</RelativeLayout>